--- a/node_demo/package.json
+++ b/node_demo/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "web3": "^1.0.0-beta.34"
   }
 }
